# Cecily

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/kylin-api/: Cargo.toml
crates/kylin-api/src/: auth.rs  datasources.rs  error.rs  jobs.rs  lib.rs  models.rs  projects.rs  query.rs
crates/kylin-api/tests/: api_tests.rs
crates/kylin-catalog/: Cargo.toml
crates/kylin-catalog/src/: conversion.rs  layout_chooser.rs  lib.rs  provider.rs  schema.rs  table.rs  udaf.rs
crates/kylin-common/: Cargo.toml
crates/kylin-common/src/: config.rs  error.rs  lib.rs  types.rs
crates/kylin-engine/: Cargo.toml
crates/kylin-engine/src/: flat_table.rs  layout_build.rs  lib.rs  parquet_writer.rs  segment_build.rs
crates/kylin-job/: Cargo.toml
crates/kylin-job/src/: job.rs  lib.rs  scheduler.rs  store.rs
crates/kylin-job/tests/: job_tests.rs
crates/kylin-metadata/: Cargo.toml
crates/kylin-metadata/migrations/: 20240101000000_create_tables.sql
crates/kylin-metadata/src/: dataflow.rs  lib.rs  manager.rs  model.rs  postgres_store.rs  project.rs  segment.rs  sqlite_store.rs  store.rs  table.rs
crates/kylin-metadata/tests/: store_tests.rs
crates/kylin-query/: Cargo.toml
crates/kylin-query/src/: context.rs  executor.rs  layout.rs  lib.rs  result.rs  udaf.rs
crates/kylin-server/: Cargo.toml
crates/kylin-server/src/: main.rs
crates/kylin-storage/: Cargo.toml
crates/kylin-storage/src/: layout.rs  lib.rs  local.rs  provider.rs
docs/: api.md  architecture.md  configuration.md  deployment.md
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
