[workspace]
resolver = "2"
members = [
    "crates/kylin-common",
    "crates/kylin-metadata",
    "crates/kylin-storage",
    "crates/kylin-catalog",
    "crates/kylin-engine",
    "crates/kylin-query",
    "crates/kylin-job",
    "crates/kylin-api",
    "crates/kylin-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/apache/kylin-rust"

[workspace.dependencies]
# DataFusion ecosystem
datafusion = "45"
datafusion-common = "45"
datafusion-expr = "45"
datafusion-physical-plan = "45"
datafusion-sql = "45"
arrow = "54"
parquet = "54"

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# UUID
uuid = { version = "1", features = ["v4"] }

# Chrono
chrono = { version = "0.4", features = ["serde"] }

# Object store
object_store = "0.11"

# Async trait
async-trait = "0.1"

# Futures
futures = "0.3"
