[package]
name = "kylin-api"
version.workspace = true
edition.workspace = true

[dependencies]
kylin-common = { path = "../kylin-common" }
kylin-metadata = { path = "../kylin-metadata" }
kylin-query = { path = "../kylin-query" }
kylin-job = { path = "../kylin-job" }
kylin-engine = { path = "../kylin-engine" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper = "1"
http-body-util = "0.1"
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
kylin-storage = { path = "../kylin-storage" }
