[package]
name = "kylin-job"
version.workspace = true
edition.workspace = true

[dependencies]
kylin-common = { path = "../kylin-common" }
kylin-metadata = { path = "../kylin-metadata" }
kylin-engine = { path = "../kylin-engine" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
sqlx.workspace = true
async-trait.workspace = true
