[package]
name = "kylin-query"
version.workspace = true
edition.workspace = true

[dependencies]
kylin-common = { path = "../kylin-common" }
kylin-metadata = { path = "../kylin-metadata" }
kylin-storage = { path = "../kylin-storage" }
kylin-catalog = { path = "../kylin-catalog" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
arrow.workspace = true
datafusion.workspace = true
datafusion-expr.workspace = true
datafusion-common.workspace = true
datafusion-sql.workspace = true
async-trait.workspace = true
chrono.workspace = true
