[package]
name = "kylin-storage"
version.workspace = true
edition.workspace = true

[dependencies]
kylin-common = { path = "../kylin-common" }
kylin-metadata = { path = "../kylin-metadata" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
arrow.workspace = true
parquet.workspace = true
object_store.workspace = true
async-trait.workspace = true
futures.workspace = true
datafusion.workspace = true
